test/vm/fails/out_of_bounds_memcpy.js

memcpy("ABC", 1, 4);
